Adding DisplayID 2.1 Type 10 "Formula-based Timing Data Block" support.
I am using a Samsung G80SD Display, which advertises the 240hz resolutions in a displayid type 10 block, which is currently not supported and results in the 240hz resolutions being unavailable.
I worked around this issue successfully by adding a supported 2.0 data block with the 240hz refresh rate but since I see more questions about this popping up I would love to have native support.
edid-decode patched an issue with this type a couple of weeks ago and now correctly parses it but the online version does not seem to be up2date yet, so I had to compile it myself: https://git.linuxtv.org/edid-decode.git/commit/?id=bc17c383597d45a3ade2395b83a3d91ecb95bc3c
I attached my original unmodified edid.
An other user reported this issue on the amd issue tracker.